<resources>
    <string name="app_name">StroopTest</string>
    <string name="redText">Red</string>
    <string name="blueText">Blue</string>
    <string name="greenText">Green</string>
    <string name="yellowText">Yellow</string>
    <string name="pinkText">Pink</string>
    <string name="brownText" >Brown</string>
    <string name="purpleText">Purple</string>
    <string name="orangeText">Orange</string>
</resources>
